--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@coreui/utils": "^2.0.2",
     "chart.js": "^3.9.1",
     "html2pdf-ts": "^1.1.1",
+    "jspdf-autotable": "^3.8.2",
     "lodash-es": "^4.17.21",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
